# Checkers-AI

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  rustfmt.toml
src/: alpha_beta.rs  checkers.rs  consts.rs  main.rs  score.rs  utils.rs
src/ai_algorithms/: alpha_beta.rs
src/checkers/: bitboard.rs  board.rs  piece.rs  piece_type.rs  player.rs  win_status.rs
src/neural_network/: neural_network.rs  storage.rs
src/neural_network/training/: graphs.rs  heuristic_comparison.rs  tournament.rs  train.rs
src/neural_network/types/: matrix.rs  neural_network_base.rs  neural_network_cublas.rs  neural_network_openblas.rs
src/neural_network/types/cuda/: context_pointer.rs  cuda.rs  kernel.cu  kernel.h  matrix_pointer.rs
src/players/alpha_beta/: alpha_beta.rs  get_move.rs  score.rs
src/players/human/: get_move.rs
src/players/neural_network/: get_move.rs  neural_network.md  training.rs
src/players/neural_network/neural_networks_types/: matrix.rs  neural_network.rs  neural_network_base.rs  neural_network_cublas.rs  neural_network_openblas.rs
src/players/neural_network/neural_networks_types/cuda/: cuda.rs  handle_pointer.rs  kernel.cu  matrix_pointer.rs
src/players/utils/: alpha_beta.rs
