bin = [
    { name = "main", path = "src/main.rs" }
]

[package]
name = "Checkers"
edition = "2024"

[dependencies]
ndarray = "0.17.2"
blas-src = { version = "0.14.0", features = ["openblas"], optional = true }
openblas-src = { version = "0.10.16", features = ["cblas", "system"], optional = true }

rand = "0.10.1"
plotpy = "1.22.0"
chrono = "0.4.44"

[build-dependencies]
cc = "1.2.63"
cfg_aliases = "0.2.1"

[features]
# If several implementations are chosen, the overriding one is the lowest on the list:
openblas = ["ndarray/blas", "blas-src/openblas", "openblas-src/cblas", "openblas-src/system"]
cublas = []
# Use f64 precision in neural networks
f64_precision = []

[profile.release]
overflow-checks = true
# For profiling:
debug = true
split-debuginfo = "off"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
arc_with_non_send_sync = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
same_length_and_capacity = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
wrong_self_convention = "allow"
